--- a/templates/Booking/base.html
+++ b/templates/Booking/base.html
@@ -87,8 +87,12 @@
                 </ul>
             </div>
             <div class="glide__arrows" data-glide-el="controls">
-                <button class="glide__arrow glide__arrow--left" data-glide-dir="<">L</button>
-                <button class="glide__arrow glide__arrow--right" data-glide-dir=">">R</button>
+                <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
+                    <img src="{% static 'Booking/images/menu/left-arrow.svg' %}" alt="left arrow" class="inline-icon">
+                </button>
+                <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
+                    <img src="{% static 'Booking/images/menu/right-arrow.svg' %}" alt="left arrow"class="inline-icon">
+                </button>
             </div>
         </div>
     </section>
