Added Table/Booking models

--- a/templates/Booking/base.html
+++ b/templates/Booking/base.html
@@ -91,10 +91,13 @@
                     <img src="{% static 'Booking/images/menu/left-arrow.svg' %}" alt="left arrow" class="inline-icon">
                 </button>
                 <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
-                    <img src="{% static 'Booking/images/menu/right-arrow.svg' %}" alt="left arrow"class="inline-icon">
+                    <img src="{% static 'Booking/images/menu/right-arrow.svg' %}" alt="left arrow" class="inline-icon">
                 </button>
             </div>
         </div>
+    </section>
+    <section class="slide full-slide booking-page" id="booking">
+
     </section>
 </body>
 </html>
