--- a/static/Booking/styles/main.css
+++ b/static/Booking/styles/main.css
@@ -441,3 +441,8 @@ a {
     opacity: 0.7;
 }
 /*#endregion*/
+/*#region Booking*/
+.booking-page {
+    background-color: var(--l-brown);
+}
+/*#endregion*/
