--- a/templates/Booking/base.html
+++ b/templates/Booking/base.html
@@ -97,7 +97,11 @@
         </div>
     </section>
     <section class="slide full-slide booking-page" id="booking">
-
+        <div class="section__title section__title_big section__title_light">
+            booking
+        </div>
+        {% block book-form %}
+        {% endblock %}
     </section>
 </body>
 </html>
