--- a/templates/Booking/index.html
+++ b/templates/Booking/index.html
@@ -47,16 +47,26 @@
 {% block book-form %}
     <form action="{% url 'home' %}" method="POST" class="booking-form">
         <div class="booking-form__field field">
-            <input type="text" required name="name" class="field__input" id="name">
+            <input type="text" required name="name" class="field__input" id="name" maxlength="32">
             <label for="name" class="field__label">
                 <span class="field__holder">name</span>
             </label>
+            <div class="field__error-box">
+                {% for err in form.name.errors %}
+                    <span class="field__error">{{ err }}</span>
+                {% endfor %}
+            </div>
         </div>
         <div class="booking-form__field field">
             <input type="tel" required name="phone" class="field__input" id="phone">
             <label for="phone" class="field__label">
                 <span class="field__holder">phone</span>
             </label>
+            <div class="field__error-box">
+                {% for err in form.phone.errors %}
+                    <span class="field__error">{{ err }}</span>
+                {% endfor %}
+            </div>
         </div>
         <div class="booking-form__field field">
             <input type="date" required name="date"
@@ -64,23 +74,38 @@
             <label for="date" class="field__label">
                 <span class="field__holder">date</span>
             </label>
+            <div class="field__error-box">
+                {% for err in form.date.errors %}
+                    <span class="field__error">{{ err }}</span>
+                {% endfor %}
+            </div>
         </div>
         <div class="booking-form__time-wrap">
-            <div class="booking-form__field field">
-                <input type="time" required name="time_from" class="field__input field__input_webkit field__input_time" id="time_from" min="18:00">
-                <label for="time_from" class="field__label">
-                    <span class="field__holder field__holder_time">from</span>
-                </label>
-            </div>
-            <div class="booking-form__field field">
-                <input type="time" required name="time_to" class="field__input field__input_webkit field__input_time" id="time_to" min="18:00">
-                <label for="time_to" class="field__label">
-                    <span class="field__holder field__holder_time">to</span>
-                </label>
-            </div>
             <span class="field__info">
                 We work from 18:00 to 23:59, every day!
             </span>
+            <div class="booking-form__field field">
+                <input type="time" required name="time_from" class="field__input field__input_webkit field__input_time" id="time_from">
+                <label for="time_from" class="field__label">
+                    <span class="field__holder field__holder_time">from</span>
+                </label>
+                <div class="field__error-box">
+                    {% for err in form.time_from.errors %}
+                        <span class="field__error">{{ err }}</span>
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="booking-form__field field">
+                <input type="time" required name="time_to" class="field__input field__input_webkit field__input_time" id="time_to">
+                <label for="time_to" class="field__label">
+                    <span class="field__holder field__holder_time">to</span>
+                </label>
+                <div class="field__error-box">
+                    {% for err in form.time_to.errors %}
+                        <span class="field__error">{{ err }}</span>
+                    {% endfor %}
+                </div>
+            </div>
         </div>
         <div class="booking-form__persons-wrap">
             <div class="selector">
@@ -92,6 +117,11 @@
                 <label for="capacity" class="field__select-label">
                     <span class="field__select-holder">capacity</span>
                 </label>
+                <div class="field__error-box">
+                    {% for err in form.capacity.errors %}
+                        <span class="field__error">{{ err }}</span>
+                    {% endfor %}
+                </div>
             </div>
             <div class="selector">
                 <select name="location" id="location" class="field__select" required>
@@ -103,6 +133,11 @@
                 <label for="location" class="field__select-label">
                     <span class="field__select-holder">table location</span>
                 </label>
+                <div class="field__error-box">
+                    {% for err in form.location.errors %}
+                        <span class="field__error">{{ err }}</span>
+                    {% endfor %}
+                </div>
             </div>
         </div>
         <div class="check_menu">
@@ -115,6 +150,11 @@
             <div class="bg-roller" id="bg-roller"></div>
             <div class="field__select-label">
                 <span class="field__select-holder">will you smoke?</span>
+            </div>
+            <div class="field__error-box">
+                {% for err in form.smoking.errors %}
+                    <span class="field__error">{{ err }}</span>
+                {% endfor %}
             </div>
         </div>
         <input type="submit" name="submit" value="book!" class="booking-form__submit">
