--- a/templates/Booking/index.html
+++ b/templates/Booking/index.html
@@ -1,163 +1,105 @@
-{% extends 'Booking/base.html' %}
 {% load static %}
-{% block menu-cards %}
-    {% for pizza in pizzas %}
-        <li class="glide__slide">
-            <div class="pizza-card">
-                <div class="pizza-card__photo-box">
-                    <img src="{{ pizza.image.url }}" alt="Pizza {{ pizza.name }}" class="pizza-card__photo">
-                    <div class="pizza-card__btn-holder">
-                        <span class="pizza-card__btn">Components</span>
-                    </div>
-                    <div class="pizza-card__description pizza-card__description_moved">
-                        {{ pizza.composition }}
-                    </div>
-                </div>
-                <div class="pizza-card__title-box">
-                    <div class="pizza-card__title">
-                        {{ pizza.name }}
-                    </div>
-                </div>
-                <div class="pizza-card__info-box call">
-                    <div class="call__block call__block_red">
-                        <img src="{% static 'Booking/images/menu/proteins.svg' %}" alt="Proteins" class="call__icon">
-                        {{ pizza.proteins }}
-                    </div>
-                    <div class="call__block call__block_yellow">
-                        <img src="{% static 'Booking/images/menu/fats.svg' %}" alt="Fats" class="call__icon">
-                        {{ pizza.fats }}
-                    </div>
-                    <div class="call__block call__block_green">
-                        <img src="{% static 'Booking/images/menu/carbohydrates.png' %}" alt="carbohydrates" class="call__icon">
-                        {{ pizza.carbohydrates }}
-                    </div>
-                    <div class="call__block call__block_brown">
-                        <img src="{% static 'Booking/images/menu/kcal.svg' %}" alt="Calories" class="call__icon">
-                        {{ pizza.calories }}
-                    </div>
-                </div>
-                <div class="pizza-card__price-box">
-                   <span class="pizza-card__price">Price: ${{ pizza.price }}</span>
-                </div>
-            </div>
-        </li>
-    {% endfor %}
-{% endblock %}
 
-{% block book-form %}
-    <form action="{% url 'home' %}" method="POST" class="booking-form">
-        <div class="booking-form__field field">
-            <input type="text" required name="name" class="field__input" id="name" maxlength="32" {% if form.is_bound %}value="{{ form.name.value }}"{% endif %}>
-            <label for="name" class="field__label">
-                <span class="field__holder">name</span>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Montserrat:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'Booking/styles/main.css' %}">
+    <link rel="stylesheet" href="{% static 'Booking/styles/media.css' %}">
+    <link rel="stylesheet" href="{% static 'Booking/styles/glide.core.min.css' %}">
+    <link rel="stylesheet" href="{% static 'Booking/styles/glide.theme.min.css' %}">
+    <script src="{% static 'Booking/scripts/glide.min.js' %}"></script>
+    <script src="{% static 'Booking/scripts/main.js' %}"></script>
+    <title>Nonno Fornario</title>
+</head>
+<body>
+    <header class="header">
+        <div class="header__wrapper content_wrap">
+            <input type="checkbox" name="menu-check" id="menu-check">
+            <label for="menu-check" class="header__label">
+                <img src="{% static 'Booking/images/header/menu.svg' %}"
+                     alt="menu icon" class="header__menu-icon">
             </label>
-            <div class="field__error-box">
-                {% for err in form.name.errors %}
-                    <span class="field__error">{{ err }}</span>
-                {% endfor %}
+            <div class="header__title">
+                <img src="{% static 'Booking/images/header/logo.svg' %}"
+                     alt="Restaurant logo" class="header__logo">
+                <span class="header__name">Nonno Fornário</span>
             </div>
+            <nav class="header__menu menu">
+                <span class="menu__item menu__item_active" id="home-section">home</span>
+                <span class="menu__item" id="about-section">about us</span>
+                <span class="menu__item" id="menu-section">menu</span>
+                <span class="menu__item" id="booking-section">booking</span>
+                <span class="menu__item" id="contacts-section">contacts</span>
+            </nav>
         </div>
-        <div class="booking-form__field field">
-            <input type="tel" required name="phone" class="field__input" id="phone" {% if form.is_bound %}value="{{ form.phone.value }}"{% endif %}>
-            <label for="phone" class="field__label">
-                <span class="field__holder">phone</span>
-            </label>
-            <div class="field__error-box">
-                {% for err in form.phone.errors %}
-                    <span class="field__error">{{ err }}</span>
-                {% endfor %}
-            </div>
+    </header>
+    <section class="slide full-slide home-wrap" id="home">
+        <div class="home">
+            <div class="home__hover"></div>
         </div>
-        <div class="booking-form__field field">
-            <input type="date" required name="date"
-                   class="field__input field__input_webkit field__input_date" id="date" min="{{ now_date }}" {% if form.is_bound %}value="{{ form.date.value }}"{% endif %}>
-            <label for="date" class="field__label">
-                <span class="field__holder">date</span>
-            </label>
-            <div class="field__error-box">
-                {% for err in form.date.errors %}
-                    <span class="field__error">{{ err }}</span>
-                {% endfor %}
-            </div>
-        </div>
-        <div class="booking-form__time-wrap">
-            <span class="field__info">
-                We work from 18:00 to 23:59, every day!
-            </span>
-            <div class="booking-form__field field">
-                <input type="time" required name="time_from" class="field__input field__input_webkit field__input_time" id="time_from" {% if form.is_bound %}value="{{ form.time_from.value }}"{% endif %}>
-                <label for="time_from" class="field__label">
-                    <span class="field__holder field__holder_time">from</span>
-                </label>
-                <div class="field__error-box">
-                    {% for err in form.time_from.errors %}
-                        <span class="field__error">{{ err }}</span>
-                    {% endfor %}
+        <div class="filler"></div>
+        <div class="home__text">
+                <div class="home__text_main">
+                    Nonno Fornário
+                </div>
+                <div class="home__text_sub">
+                    Italian Pizza with Ural Character
                 </div>
             </div>
-            <div class="booking-form__field field">
-                <input type="time" required name="time_to" class="field__input field__input_webkit field__input_time" id="time_to" {% if form.is_bound %}value="{{ form.time_to.value }}"{% endif %}>
-                <label for="time_to" class="field__label">
-                    <span class="field__holder field__holder_time">to</span>
-                </label>
-                <div class="field__error-box">
-                    {% for err in form.time_to.errors %}
-                        <span class="field__error">{{ err }}</span>
-                    {% endfor %}
-                </div>
+    </section>
+    <section class="slide full-slide about-us" id="about">
+        <div class="about__description cell">
+            <div class="cell__caption">about us</div>
+            <div class="cell__text">
+                since <b class="bold">1920</b> we have been cooking the best pizza in the urals.
+            </div>
+            <div class="cell__text">
+                we served visitors from <span class="red"><b class="bold">76</b></span> countries,
+                <span class="yellow"><b class="bold">315</b></span> cities and
+                <span class="green"><b class="bold">4</b></span> continents.
+            </div>
+            <div class="cell__text">
+                here the Italian nature and the Ural character are ideally combined ...  so,
+            </div>
+            <div class="cell__text">
+                how about some pizza? <b class="bold">:-)</b>
             </div>
         </div>
-        <div class="booking-form__persons-wrap">
-            <div class="selector">
-                <select name="capacity" id="capacity" class="field__select" required>
-                    {% for i in cap_range %}
-                        <option value="{{ i }}">{{ i }}</option>
-                    {% endfor %}
-                </select>
-                <label for="capacity" class="field__select-label">
-                    <span class="field__select-holder">capacity</span>
-                </label>
-                <div class="field__error-box">
-                    {% for err in form.capacity.errors %}
-                        <span class="field__error">{{ err }}</span>
-                    {% endfor %}
-                </div>
-            </div>
-            <div class="selector">
-                <select name="location" id="location" class="field__select" required>
-                    <option value="ANY">Any</option>
-                    <option value="WND">Near to window</option>
-                    <option value="CEN">In the center of restaurant</option>
-                    <option value="COR">Corner of restaurant</option>
-                </select>
-                <label for="location" class="field__select-label">
-                    <span class="field__select-holder">table location</span>
-                </label>
-                <div class="field__error-box">
-                    {% for err in form.location.errors %}
-                        <span class="field__error">{{ err }}</span>
-                    {% endfor %}
-                </div>
+        <div class="cell about__image">
+            <img src="{% static 'Booking/images/about/cooker.png' %}" alt="Nonno art">
+        </div>
+        <div class="about__map cell">
+            <div class="map-container" id="map-box">
+
             </div>
         </div>
-        <div class="check_menu">
-            <input type="radio" name="smoking" value="ANY" class="booking-form__checkbox" id="sm-any">
-            <input type="radio" name="smoking" value="NO" class="booking-form__checkbox" id="sm-no" checked>
-            <input type="radio" name="smoking" value="YES" class="booking-form__checkbox" id="sm-yes">
-            <label for="sm-any" class="field__smoking-label" id="sm-any-label">Any</label>
-            <label for="sm-no" class="field__smoking-label" id="sm-no-label">No</label>
-            <label for="sm-yes" class="field__smoking-label" id="sm-yes-label">Yes</label>
-            <div class="bg-roller" id="bg-roller"></div>
-            <div class="field__select-label">
-                <span class="field__select-holder">hall with ashtrays?</span>
+    </section>
+    <section class="slide full-slide pizza-menu" id="menu">
+        <div class="images glide">
+            <div class="glide__track" data-glide-el="track">
+                <ul class="glide__slides">
+                    {% include 'Booking/menu.html' %}
+                </ul>
             </div>
-            <div class="field__error-box">
-                {% for err in form.smoking.errors %}
-                    <span class="field__error">{{ err }}</span>
-                {% endfor %}
+            <div class="glide__arrows" data-glide-el="controls">
+                <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
+                    <img src="{% static 'Booking/images/menu/left-arrow.svg' %}" alt="left arrow" class="inline-icon">
+                </button>
+                <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
+                    <img src="{% static 'Booking/images/menu/right-arrow.svg' %}" alt="left arrow" class="inline-icon">
+                </button>
             </div>
         </div>
-        <input type="submit" name="submit" value="book!" class="booking-form__submit">
-        {% csrf_token %}
-    </form>
-{% endblock %}
+    </section>
+    <section class="slide full-slide booking-page" id="booking">
+        <div class="section__title section__title_big section__title_light">
+            booking
+        </div>
+        {% include 'Booking/form.html' %}
+    </section>
+</body>
+</html>
