--- a/static/Booking/styles/main.css
+++ b/static/Booking/styles/main.css
@@ -699,4 +699,71 @@ a {
     font-size: 1rem;
     margin-top: 3px;
 }
+.booking-form__message-box {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 5000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#message-box__bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.45);
+}
+.message {
+    box-sizing: border-box;
+    width: calc(100% - 50px);
+    max-width: 500px;
+    min-height: 300px;
+    background-color: var(--light);
+    z-index: 5500;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 20px solid var(--light);
+}
+.message__icon-wrap {
+    width: 100%;
+    flex-basis: 50%;
+    height: 50%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+.message__icon-wrap_success {
+    background-image: url('../images/messages/success.svg');
+}
+.message__icon-wrap_fail {
+    background-image: url('../images/messages/fail.svg');
+}
+.message__text {
+    flex-basis: 30%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.3rem;
+    text-align: center;
+}
+.message__ok {
+    flex-basis: 20%;
+    width: 40%;
+    background-color: var(--brown);
+    color: var(--light);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    font-weight: bold;
+}
 /*#endregion*/
