--- a/templates/Booking/index.html
+++ b/templates/Booking/index.html
@@ -11,8 +11,10 @@
     <link rel="stylesheet" href="{% static 'Booking/styles/media.css' %}">
     <link rel="stylesheet" href="{% static 'Booking/styles/glide.core.min.css' %}">
     <link rel="stylesheet" href="{% static 'Booking/styles/glide.theme.min.css' %}">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="{% static 'Booking/scripts/glide.min.js' %}"></script>
     <script src="{% static 'Booking/scripts/main.js' %}"></script>
+    <script src="{% static 'Booking/scripts/ajax.js' %}"></script>
     <title>Nonno Fornario</title>
 </head>
 <body>
