--- a/templates/Booking/form.html
+++ b/templates/Booking/form.html
@@ -69,7 +69,7 @@
                 {% endfor %}
             </select>
             <label for="capacity" class="field__select-label">
-                <span class="field__select-holder">capacity</span>
+                <span class="field__select-holder">people</span>
             </label>
             <div class="field__error-box">
                 {% for err in form.capacity.errors %}
