--- a/static/Booking/styles/main.css
+++ b/static/Booking/styles/main.css
@@ -754,6 +754,7 @@ a {
     justify-content: center;
     font-size: 1.3rem;
     text-align: center;
+    padding: 15px 0;
 }
 .message__ok {
     flex-basis: 20%;
