--- a/templates/Booking/index.html
+++ b/templates/Booking/index.html
@@ -105,5 +105,15 @@
         </div>
         {% include 'Booking/form.html' %}
     </section>
+    <footer class="footer">
+        <span class="footer__logo">
+            Nonno Fornário
+        </span>
+        <div class="contacts">
+            <span class="contact-info"><a href="tel:+79126031093">+7 912 603-10-93</a></span>
+            <span class="contact-info"><a href="mailto:savelevmatthew@gmail.com">savelevmatthew@gmail.com</a></span>
+        </div>
+        {% include 'Booking/socials.html' %}
+    </footer>
 </body>
 </html>
