--- a/static/Booking/styles/main.css
+++ b/static/Booking/styles/main.css
@@ -768,3 +768,65 @@ a {
     font-weight: bold;
 }
 /*#endregion*/
+/*#region Footer*/
+.footer {
+    box-sizing: border-box;
+    background: var(--grey);
+    width: 100vw;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.contacts {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin: 20px 0;
+}
+.contact-info {
+    flex-basis: 50%;
+    padding: 0 20px;
+    font-size: 1.2rem;
+    line-height: 2;
+}
+.contact-info:first-child {
+    text-align: right;
+    /*border-top: 1px solid var(--text);*/
+}
+.contact-info:last-child {
+    border-bottom: 1px solid var(--text);
+}
+.footer__logo {
+    font-family: 'Dancing Script', cursive;
+    font-size: 2rem;
+}
+.socials {
+    width: calc(100% - 50px);
+    max-width: 500px;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.socials__box {
+    width: 50px;
+    height: 50px;
+    margin: 0 20px;
+    overflow: hidden;
+    border-radius: 15px;
+}
+.socials__box:first-child {
+    margin-left: 0;
+}
+.socials__box:last-child {
+    margin-right: 0;
+}
+.socials__icon {
+    width: 100%;
+    height: 100%;
+}
+/*#endregion*/
