--- a/templates/Booking/index.html
+++ b/templates/Booking/index.html
@@ -105,7 +105,7 @@
         </div>
         {% include 'Booking/form.html' %}
     </section>
-    <footer class="footer">
+    <footer class="footer" id="contacts">
         <span class="footer__logo">
             Nonno Fornário
         </span>
