--- a/static/Booking/styles/main.css
+++ b/static/Booking/styles/main.css
@@ -804,7 +804,7 @@ a {
     font-size: 2rem;
 }
 .socials {
-    width: calc(100% - 50px);
+    width: 100%;
     max-width: 500px;
     height: 50px;
     display: flex;
