--- a/static/Booking/styles/main.css
+++ b/static/Booking/styles/main.css
@@ -6,7 +6,7 @@
     --brown: #675D51;
     --l-brown: #CCB38B;
     --light: #FDF6E6;
-    --half-light: rgba(253, 246, 230, 0.6);
+    --half-light: #e9dcc2;
     --grey: #DEDCD7;
     --text: #1f1f1f;
     --yellow: #de9c2f;
@@ -574,6 +574,12 @@ a {
 .field__check-close-wrap {
     grid-column: span 2;
 }
+.field__input_time,
+.field__input_date,
+.booking-form__submit {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
 .field__info {
     display: flex;
     flex-direction: column;
@@ -766,6 +772,15 @@ a {
     align-items: center;
     font-size: 2rem;
     font-weight: bold;
+}
+.field__input_webkit ~ .field__label::before {
+    content: '';
+    position: absolute;
+    background: var(--half-light);
+    width: 100%;
+    height: 60px;
+    bottom: 0;
+    left: 0;
 }
 /*#endregion*/
 /*#region Footer*/
